# nm-dbus-proxy-rs

./: .gitlab-ci.yml  .lefthook.toml  Cargo.toml  LICENSE  README.md  justfile  nm-dbus-proxy.service  org.freedesktop.NetworkManager.conf  org.freedesktop.NetworkManager.service  renovate.json  rust-toolchain.toml
src/: config.rs  enums.rs  iwd.rs  lib.rs  main.rs  persistence.rs  runtime.rs
src/network_manager/: access_point.rs  active_connection.rs  agent_manager.rs  checkpoint.rs  dns_manager.rs  mod.rs  ppp.rs  settings.rs  settings_connection.rs  vpn_connection.rs  vpn_plugin.rs  wifi_p2p_peer.rs
src/network_manager/device/: loopback.rs  mod.rs  specialized.rs  wired.rs  wireless.rs
src/systemd_networkd/: link.rs  mod.rs
tests/: integration_test.rs
