[package]
name = "nm-dbus-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread"] }
zbus = { version = "5.5.0", default-features = false, features = ["tokio"] }
zbus_systemd = { version = "0.25701.0", features = ["network1"] }
