[package]
name = "nm-dbus-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zbus = { version = "5.5.0", default-features = false, features = ["tokio"] }
zbus_systemd = { version = "0.25900.0", features = ["network1"] }
